fix: update CSS to ensure navigation tabs visibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,40 +16,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
-}
-
-.container {
-  padding: 0 2rem;
-}
-
-.header {
-  margin: 1rem 0;
-}
-
-.header .liner {
-  align-items: center;
-  display: flex;
-}
-
-.header .title-and-version {
-  border-bottom: 1px solid var(--border-color);
-  padding: 0 0.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  flex: 1 0 auto;
-}
-
-.header img {
-  width: 3rem;
-  margin-right: 1rem;
-}
-
-:root {
-  --border-color: #70ad47;
-  --primary-color: #507e32;
-  --primary-color-light: #99c184;
-  --disabled-background-color: #808080;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -58,19 +26,15 @@ body {
   padding: 0 2rem;
 }
 
-body {
-  line-height: 1.5;
-  margin: 0;
-  padding: 0;
-}
-
 .header {
   margin: 1rem 0;
+  width: 100%;
 }
 
 .header .liner {
   align-items: center;
   display: flex;
+  width: 100%;
 }
 
 .header .title-and-version {
@@ -92,10 +56,12 @@ body {
   cursor: pointer;
   font-size: 1.2rem;
   margin: 1rem 0 0;
+  width: 100%;
 }
 
 .page-selector nav {
   display: flex;
+  width: 100%;
 }
 
 .page-selector a {
@@ -107,6 +73,7 @@ body {
   color: khaki;
   background: var(--primary-color);
   justify-content: center;
+  align-items: center;
   text-decoration: none;
   float: left;
 }
